Fixes homepage font sizes on small laptop windows and mobile screens

--- a/src/containers/Home/index.css
+++ b/src/containers/Home/index.css
@@ -130,7 +130,7 @@
 }
 
 
-/* CSS for tablets */
+/* CSS for small windows and mobile phones*/
 @media only screen and (max-width: 600px) {
   .home {
     display: flex;
@@ -150,38 +150,6 @@
     padding-top: 2vh;
     width: 100%;
   }
-
-  #latestReleases .displayGrid {
-    margin-right: 0;
-  }
-
-}
-
-
-/* Mobile screen sizing */
-@media only screen and (max-width: 480px) {
-  /* .home {
-    display: flex;
-    flex-wrap: wrap;
-    flex-direction: column;
-    height: 100%;
-    margin-right: 1.5vh;
-  }
-
-  #newsPreview {
-    max-width: 100%;
-    margin-right: 0;
-    margin-bottom: 2.5vh;
-  }
-
-  #latestReleases {
-    padding-top: 2vh;
-    width: 100%;
-  }
-
-  #latestReleases .displayGrid {
-    margin-right: 0;
-  } */
 
   .postPreview .postTitle {
     font-size: 4.75vmin;
@@ -206,6 +174,10 @@
   #latestReleases .releaseHeadline {
     font-size: 4.75vmin;
   }
+  #latestReleases .displayGrid {
+    margin-right: 0;
+  }
+
 }
 
 
